--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require": {
         "latte/latte": "^2.10",
         "bramus/router": "^1.6",
-        "vlucas/phpdotenv": "^5.3"
+        "vlucas/phpdotenv": "^5.3",
+        "j4mie/idiorm": "^1.5"
     }
 }
