change:email author | hariyanto asu

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         },
         {
             "name": "reiyan",
-            "email": "hariyantoreiyan.hr@gmail.com"
+            "email": "hariyantoriyan.hr@gmail.com"
         }
     ],
     "require": {
