fix: typo semicolon

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ APP_FORCESSL = false
 #---------------------------------
 
 DB_DRIVER = mysqli
-DB_HOSTNAME = localhost
+DB_HOSTNAME = 127.0.0.1
 DB_USERNAME = root
 DB_PASSWORD = reikopassworddb
 DB_DATABASE = reikodb
